#8425 bg height issue for image

--- a/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-image-gallery.less
@@ -8,6 +8,9 @@
         .component-wrap {
             position: static !important; //needed for the lightbox effect
         }
+        .component-inner{
+            position: relative;
+        }
     }
 
 
