--- a/public/less/sections/contacts.less
+++ b/public/less/sections/contacts.less
@@ -141,6 +141,9 @@
     .sticky-filter-header .column-width {
         width: 8.3% !important;
     }
+    .sticky-filter-header .tags_search {
+        width: 12% !important;
+    }
 }
 
 .ui-select-multiple.ui-select-bootstrap input.ui-select-search:not([placeholder='']) {
