--- a/public/components/email-2-col_v1.html
+++ b/public/components/email-2-col_v1.html
@@ -18,7 +18,7 @@
     </tr>
     <tr>
         <td>
-            <table align="center" border="0" cellpadding="0" cellspacing="0" width="640" id="templateColumns">
+            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" id="templateColumns">
                 <tr>
                     <td align="center" valign="top" width="50%" class="templateColumnContainer" style="padding-right: 10px">
                         <table border="0" cellpadding="10" cellspacing="0" width="100%">
