--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -221,7 +221,7 @@ contact-details-component{
         }
         .activity-filter{
             select.form-control{
-                width: 25%;
+                width: 30%;
                 display: inline-block;
                 margin-left: 10px;
             }
@@ -281,10 +281,10 @@ contact-details-component{
                 }
                 &.form-type{
                     &:after{
-                        border-color: #E1EFDE;
+                        border-color: #02a92f70;
                     }
                     i.fa{
-                        color: #E1EFDE;
+                        color: #02a92f70;
                     }
                 }
             }
