--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -287,6 +287,15 @@ contact-details-component{
                         color: #02a92f70;
                     }
                 }
+                &.user-notes-type{
+                    img{
+                        position: absolute;
+                        width: 28px;
+                        top: 6px;
+                        left: -14px;
+                        z-index: 1;
+                    }
+                }
             }
                 
         }
