#10543 css fixes for timeline to match UI

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -227,6 +227,8 @@ contact-details-component{
             }
         } 
         .timeline-xs{
+            margin-left: 15px;
+            margin-bottom: 15px;
             .activity-content{
                 border: 1px solid rgba(0,0,0,.15);
                 &:before{
@@ -256,6 +258,9 @@ contact-details-component{
                     height: 36px;
                     margin-left: -18px;
                     top:0;
+                }
+                &:last-child{
+                    border: none !important;
                 }
             }
 
