--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -401,22 +401,9 @@
                             </li>
                          </ul>
                     </div>
-                    <div class="panel-footer border-light">
-                        <label for="newNote"> New Note</label>
-                        <textarea id="newNote" class="form-control margin-bottom-15 autosize area-animated msd-elastic: \n;" ng-model="vm.newNote.text"></textarea>
-                        <div class="checkbox clip-check check-success margin-top-10" ng-if="vm.state.contact.details[0].emails[0].email">
-                            <input type="checkbox" id="note-editable" ng-model="vm.notesEmail.enable" >
-                            <label for="note-editable">
-                                Send New Note to Contact
-                            </label>
-                        </div>
-                        <button type="button" ng-disabled="!(vm.newNote.text)" class="btn btn-info btn-block btn-o btn-wide btn-scroll btn-scroll-top ti-plus" ng-click="vm.addNote(vm.newNote.text)">
-                            <span>Add</span>
-                        </button>
-                    </div>
                 </div>
             </div>
-            <contact-activity-component contact-id="vm.state.contactId"></contact-activity-component>
+            <contact-activity-component contact-id="vm.state.contactId" contact="vm.state.contact"></contact-activity-component>
         </div>
         <div class="clearfix"></div>
     </div>
