--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -9,11 +9,9 @@
 			<option value="asc">ASC</option>
             <option value="desc">DESC</option>
         </select>
-		<button type="button" ng-if="!vm.uiState.showNote" class="btn btn-info btn-o pull-right" ng-click="vm.uiState.showNote = true">
-            <span>Add a Note</span>
-        </button>
-        <button type="button" ng-if="vm.uiState.showNote" class="btn btn-info btn-o pull-right" ng-click="vm.uiState.showNote = false">
-            <span>Cancel</span>
+		<button type="button" class="btn btn-info btn-o pull-right" ng-click="vm.uiState.showNote = !vm.uiState.showNote">
+            <span ng-show="!vm.uiState.showNote">Add a Note</span>
+            <span ng-show="vm.uiState.showNote">Cancel</span>
         </button>
     </div>
     <hr />
