--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -363,8 +363,8 @@
                             </form>
                         </div>
                     </tab>
-                    <tab heading="Devices/Browser">
-                        Devices/Browser
+                    <tab heading="Devices & Browser">
+                        Devices & Browser
                     </tab>
                     <tab heading="Location & Network">
                         <div class="map margin-bottom-15">
