#10627 duplicate image issue

--- a/public/less/frontend/components/meet-team-v2.less
+++ b/public/less/frontend/components/meet-team-v2.less
@@ -76,6 +76,8 @@
       display: block;
       margin: 0 auto;
       border-radius: 5px;
+      background-repeat: no-repeat;
+      background-position: center; 
     }
 
     .team-max-width {
