--- a/public/less/frontend/components/top-bar-v1.less
+++ b/public/less/frontend/components/top-bar-v1.less
@@ -6,6 +6,10 @@
             padding-left: 0!important;
             padding-right: 0!important;
         }
+        @media screen and (min-width: 1200px) {
+            width: 100%;
+        }
+
     }
 
     .navbar .nav{
