#10543 Updated activity timeline content

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -249,6 +249,16 @@ contact-details-component{
                     border-bottom: solid 6px transparent;
                     border-top: solid 6px transparent;
                 }
+
+                .activity-inner-content{
+                    div.activity-title, div.activity-time, div.content-data {
+                        padding-left: 0;
+                        padding-right: 2px;
+                    }
+                    div.content-data{
+                        padding-top: 5px;
+                    }
+                }
             }
 
             .timeline-item{                
