--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -231,6 +231,7 @@ contact-details-component{
             margin-bottom: 15px;
             .activity-content{
                 border: 1px solid rgba(0,0,0,.15);
+                background: #ffffff;
                 &:before{
                     position: absolute;
                     top: 11px;
