--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -1,19 +1,25 @@
 <div class="margin-top-20 activity-timeline">
     <h3>Activity Timeline</h3>
     <div class="activity-filter">
-    	<span>Filter</span>
-		<select ng-model="vm.state.activityFilter.type" class="form-control" ng-options="type.data as type.label for type in vm.state.contactConstant.contact_activity_types.dp" ng-change="vm.filterContactActivities()">
-        </select>
-    	<span>Sort</span>
-    	<select id="select_activity_type" ng-model="vm.state.activityFilter.sort" class="form-control" ng-change="vm.filterContactActivities()">
-			<option value="asc">ASC</option>
-            <option value="desc">DESC</option>
-        </select>
-		<button type="button" class="btn btn-info btn-o pull-right" ng-click="vm.uiState.showNote = !vm.uiState.showNote">
-            <span ng-show="!vm.uiState.showNote">Add a Note</span>
-            <span ng-show="vm.uiState.showNote">Cancel</span>
-        </button>
+    	<div class="col-xs-12 col-md-10 col-sm-8 padding-left-0 padding-right-0">
+	    	<span>Filter</span>
+			<select ng-model="vm.state.activityFilter.type" class="form-control" ng-options="type.data as type.label for type in vm.state.contactConstant.contact_activity_types.dp" ng-change="vm.filterContactActivities()">
+	        </select>
+	    	<span>Sort</span>
+	    	<select id="select_activity_type" ng-model="vm.state.activityFilter.sort" class="form-control" ng-change="vm.filterContactActivities()">
+				<option value="asc">ASC</option>
+	            <option value="desc">DESC</option>
+	        </select>    
+	    </div>
+	    <div class="clearfix mb15 visible-xs"></div>
+	    <div class="col-xs-12 col-md-2 col-sm-4 padding-left-0 padding-right-0">
+			<button type="button" class="btn btn-info btn-o pull-right" ng-click="vm.uiState.showNote = !vm.uiState.showNote">
+	            <span ng-show="!vm.uiState.showNote">Add Note</span>
+	            <span ng-show="vm.uiState.showNote">Cancel</span>
+	        </button>
+	    </div>    
     </div>
+    <div class="clearfix"></div>
     <hr />
 	<div ng-if="vm.uiState.showNote">
         <label for="newNote"> New Note</label>
