notification icon issue #9446

--- a/public/admin/assets/var/techevent/views/partials/nav.html
+++ b/public/admin/assets/var/techevent/views/partials/nav.html
@@ -23,8 +23,8 @@
 			<div class="item-content">
 				<div class="item-media">
 					<i class="ti-home"></i>
-                    <span ng-if="showDashboardNotificationIcon" class="fa fa-exclamation-circle dashboard-update-icon"></span>
-				</div>
+                  <!--span ng-if="showDashboardNotificationIcon" class="fa fa-exclamation-circle dashboard-update-icon"></span-->
+					</div>
 				<div class="item-inner">
 					<span class="title" translate="sidebar.nav.dashboard.MAIN"> Dashboard</span>
 				</div>
