#10543 Duplicate activities in filter

--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -69,7 +69,7 @@
 	                                		OTHER
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        {{activity.detail}}             
@@ -81,7 +81,7 @@
 	                                		EMAIL SENT
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        {{activity.detail}}             
@@ -94,7 +94,7 @@
 	                                		CONTACT CREATED
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Contact created for 
@@ -111,7 +111,7 @@
 	                                		CONTACT CREATED
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Contact created for 
@@ -128,7 +128,7 @@
 	                                		SUBSCRIBE
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Subscribe for 
@@ -146,7 +146,7 @@
 	                                		TRIAL CONVERSION
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Trial Conversion 
@@ -164,7 +164,7 @@
 	                                		SUBSCRIPTION CANCELED
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Subscription Canceled for 
@@ -181,7 +181,7 @@
 	                                		Submmited the form
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        <ul class="form-values">
@@ -200,7 +200,7 @@
 	                                		FORM SUBMITTED
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Form Submitted for 
@@ -218,7 +218,7 @@
 	                                		EMAIL DELIVERED
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Email  
@@ -237,7 +237,7 @@
 	                                		EMAIL OPENED
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Email Opened 
@@ -257,7 +257,7 @@
 	                                		EMAIL CLICKED
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Email Clicked 
@@ -277,7 +277,7 @@
 	                                		EMAIL UNSUBSCRIBE
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Email Unsubscribe for 
@@ -294,7 +294,7 @@
 	                                		SUBSCRIPTION PAID
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                        Subscription Paid for 
@@ -312,7 +312,7 @@
 	                                		Email Bounced
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                       Email Bounced for 
@@ -325,7 +325,7 @@
 	                                		Order Created
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                       An order created with Order Id
@@ -338,7 +338,7 @@
 	                                		Order Created
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                       An order created with Order Id
@@ -353,7 +353,7 @@
 	                                        <span class="text-bold" ng-if="!activity.user.first">{{activity.user.username}}</span>
 	                                	</div>
 	                                	<div class="text-muted text-small activity-time col-xs-12 col-sm-4">
-		                            		{{activity.start | date:'M d @ h:mm a' | lowercase}}
+		                            		{{activity.start | date:'M/d @ h:mm a' | lowercase}}
 		                        		</div>		                        		
 	                                    <div class="col-xs-12 content-data">
 	                                       {{activity.note}}
