Added check for contact before loading activities #10543

--- a/public/admin/assets/js/contact-details/contact-details.component.html
+++ b/public/admin/assets/js/contact-details/contact-details.component.html
@@ -403,7 +403,7 @@
                     </div>
                 </div>
             </div>
-            <contact-activity-component contact-id="vm.state.contactId" contact="vm.state.contact"></contact-activity-component>
+            <contact-activity-component contact-id="vm.state.contactId" contact="vm.state.contact" ng-if="vm.state.contact"></contact-activity-component>
         </div>
         <div class="clearfix"></div>
     </div>
